# roblox-RPC

./: .gitignore  Cargo.toml  README.md  chr.reg  place_id.txt  place_id_offset.txt
roblox-offset/: Cargo.toml
roblox-offset/src/: lib.rs  main.rs
roblox-starter/: start.ts
roblox-updater/: Cargo.toml
roblox-updater/src/: main.rs
src/: lib.rs  main.rs  mngr.rs  roblox.rs
src/data/: mod.rs  place_details.rs  thumb_data.rs
