[package]
name = "roblox-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gp-rbx = {path = ".."}
roblox-offset = {path = "../roblox-offset"}
poggers = {git = "https://github.com/pozm/poggers.git"}